data/all_generated_tests/raw_wast_tests/call_UnreachableCodeExecution_3305.wast
;; 4. **Test Description**: Implement a loop with a break condition that erroneously points to an `unreachable` instruction instead of a valid function, checking if `pushTypes` is properly managed.

(assert_invalid
  (module
    (func $loop-with-break-unreachable
      (loop 
        (block 
          (br_if 0 (i32.eq (i32.const 1) (i32.const 1)))
          (unreachable)
        )
      )
    )
  )
  "unreachable code in loop"
)